tried adding canvas to core needs canvas manager and rpc needs multithreading